tests/fail/98-fail-unsupported-type.stderr
error: df-derive does not support HashMap
  --> tests/fail/98-fail-unsupported-type.rs:10:15
   |
10 |     metadata: HashMap<String, String>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^
